Styling filters, adding gap divs to fix incomplete grid rows

--- a/assets/css/_home.scss
+++ b/assets/css/_home.scss
@@ -105,6 +105,7 @@ hr {
   margin-bottom: 1.5em;
   font-size: 1.25em;
   background-repeat: no-repeat;
+  background-blend-mode: multiply;
   background-size: 55%;
   background-position: center center;
   transition: all .2s ease-in;
